# swecp2025jmbc

./: CMakeLists.txt  DBCreator.cpp  README.md  RecSys.cpp  RecSysOOP.cpp  RecipeDatabases.sqlite  app.cpp  app0.0.1  core.db  crowtest2.cpp  crowtestv1.cpp  sqlitecpp.cpp  test  test.cpp  testa.db
include/: bgezdb.h  bgezitem.h  bgeztraits.h  bgezuser.h
include/crow/Crow-master/examples/websocket/: example_ws
recipe-app/: capacitor.config.json  package-lock.json  package.json
recipe-app/android/app/: build.gradle
recipe-app/android/app/src/main/java/com/bgez/recipeapp/: MainActivity.java
recipe-app/android/app/src/main/res/values/: strings.xml
recipe-app/recipe-app/: capacitor.config.json
recipe-app/src/: App.tsx  Login.tsx
recipe-app/src/Front_End/: Account.html  Barcode.html  Favorites.html  Homepage.html  Login.html  Manual.html  Receipt.html  Recent.html  Recipes.html  Saved.html  ScanFood.html  home.html  signup.html
recipe-app/src/Login_Pages/: Barcode.html  Front.html  Homepage.html  Login.html  Manual.html  Receipt.html  Recent.html  ScanFood.html  home.html  login.html  signup.html
templates/: signup.html  testpage.html
